fix: layout broken

--- a/styles/dates.css
+++ b/styles/dates.css
@@ -24,7 +24,7 @@ section#dates-container header form div#inputs-wrapper > div:first-child {
 }
 
 section#dates-container header form div#inputs-wrapper > div:first-child input {
-    flex: 1;
+    width: 100%;
 }
 
 section#dates-container header form div#inputs-wrapper > div {
